web3cache-subscriptions/deployment/prod/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: web3cache
  name: web3cache-subscriptions
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web3cache-subscriptions
  template:
    metadata:
      labels:
        component: web3cache-subscriptions
    spec:
      containers:
        - name: web3cache-subscriptions-client
          image: ghcr.io/orangecomet/web3cache-subscriptions:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: https
          resources:
            requests:
              memory: 100Mi
              cpu: 10m
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "web3cache-subscriptions"
      imagePullSecrets:
        - name: dockerconfigjson-github-com
