web3cache-subscriptions/deployment/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: web3cache
  name: web3cache-subscriptions
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:627051000352:certificate/04baa6ff-9dca-474c-a9d0-8c3618013301
    alb.ingress.kubernetes.io/group.name: "web3cache-prod"
    alb.ingress.kubernetes.io/group.order: "1"
spec:
  ingressClassName: alb
  rules:
    - host: web3cache.orangecomet.io
      http:
        paths:
          - path: /web3cache/events/
            pathType: Prefix
            backend:
              service:
                name: web3cache-subscriptions-service
                port:
                  number: 443
